﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.14...]
### 2019-11-23
	Fixed: Processor count is fetched via P/Invoke to avoid a rare COM exception. (reported by Chairkicker Nick)
	Fixed: Null reference error in exit cleanup. (reported by Chairkicker Nick)
	Fixed: Double reporting of an error in exit cleanup. (reported by Chairkicker Nick)
### 2019-11-11
	Fixed: Assertation error in health monitor from poorly handled lock.
### 2019-10-15
	Changed: Log some self-maintenance errors properly.
	Fixed: Boot time high performance mode was doing math wrong and crashing. (reported by Chairkicker Nick)
### 2019-10-13
	Changed: Log initialization failures better.
### 2019-10-12
	Fixed: NullReferenceException in the crash handler (reported by Chairkicker Nick)
	Fixed: ArgumentOutOfRangeException in opening component configuration with unexpected WMI poll delay. (reported by Chairkicker Nick)
### 2019-10-10
	Added: Session start and session end power boosting. Disabled by default. (requested by Chairkicker Nick)
### 2019-10-09
	Fixed: 2 potential errors when closing down.
### 2019-09-25
	Fixed: Process debug overrode some basic output, turning them all into debug messages. Messages that normally would appear are no longer labeled as debug.
### 2019-09-23
	Fixed: Watchlist warning option was causing it to trigger excessively.
### 2019-09-18
	Fixed: Null reference when default audio device is lost.
	Changed: Sorting of loaders. Now ignores ignored items.
	Added: Exclusive mode can be enabled in the UI for watchlist rules.
### 2019-09-12
	Changed: Don't log a useless error regarding process exit.
### 2019-09-11
	Added: Warn option to watchlist rules so they appear as warnings in the log instead. Personal use case is logging things running from temp with parent also logged.
### 2019-08-25
	Fixed: Process debug was not showing as much as it should've in exit wait list.